OPHYK-585 CAS 7.2 upgrade